--- a/admin.html
+++ b/admin.html
@@ -39,11 +39,14 @@
       <option value="car">car</option>
       <option value="auto">auto</option>
       <option value="truck">truck</option>
-      
-       
+      <option value="bus">bus</option>
     </select>
+    <button>Clear Filter</button>
 
   </div>
   
 </body>
+<script>
+  
+</script>
 </html>
