--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <h2>login</h2>
+  <h2>Fleed Managment login</h2>
   <form id="loginpage">
     <label>Email:</label><br><br>
     <input type="Email" placeholder="enter your email" id="email"><br><br>
